--- a/ChatApp/Info.plist
+++ b/ChatApp/Info.plist
@@ -30,7 +30,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fbAPP-ID</string>
+				<string>fb2661941527284693</string>
 			</array>
 		</dict>
 	</array>
